--- a/styles.qss
+++ b/styles.qss
@@ -1,9 +1,3 @@
-#Toggle,
-#View,
-#Add,
-#ViewStudent, 
-#ViewCollege, 
-#ViewProgram, 
 #AddStudent, 
 #AddCollege, 
 #AddProgram,
@@ -25,6 +19,8 @@
     border: 0px solid;
     padding: 0;
     margin: 0;
+    font-weight: bold;
+    font-family: "Georgia";
 }
 #Toggle:hover,
 #View:hover,
@@ -36,4 +32,26 @@
 #AddCollege:hover, 
 #AddProgram:hover {
     background-color: rgb(85, 170, 255);
+    color: rgb(255, 255, 255);
 }
+
+#Toggle, #View, #Add{
+    color: rgb(35, 35, 35);
+    background-color: rgb(35, 35, 35);
+    font-size: 14px;
+    text-align: left;
+    padding-left: 10px;
+    font-weight: bold;
+    font-family: "Georgia";
+}
+#ViewStudent, #ViewCollege, #ViewProgram{
+    color: rgb(35, 35, 35);
+    background-color: rgb(35, 35, 35);
+    font-size: 10px;
+    text-align: left;
+    padding-left: 9px;
+    font-family: "Georgia";
+}
+
+
+
